umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_extended_mol_ketcher_Unable to save canvas to MOL - system throws an error-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 172
bond_count: 250
sum_formula: C140BCl3F4Fe5N2O10P6S-1
