umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_extended_mol_ketcher_adenosine-triphosphate-cm-bond-lengh.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 33
sum_formula: C10N5O13P3
